mejoras en formato de fechas, mejoras en infores. Alta de equipos. Alta de facturas. Mejora en dash de clientes para poder visualizar facturas e informes